# scripts

./: .gitignore  Pipfile  app_feb.json  apps_feb_all.txt  download_cleanup.bat
Auto HotKey/: Raid Farming.ahk
Python Scripts/: OMG_screenshot_cleanup.py  OMG_screenshot_cleanup_2.py  book types.py  book_types.ipynb  current_tab_alt_versions.py  download_folder_cleanup.py  download_organiser.py  folder_creation_testing.py  gmail_updater.py  pyproject.toml  test signature.html
Unraid maintenance/: device_size_format.sh  device_vars_test.sh
WindowsPowerShell/: Book_Folder_Sync.ps1  all_app.txt  apps.json  choco_export.config  choco_install test.ps1  choco_install.ps1  choco_upgrade_install.ps1  delete_exe.ps1  download_cleanup.bat  download_cleanup.ps1  empty_folders.ps1  extensionMapping.csv  folder_compare.ps1  omg_archive.ps1  omg_archive_content_listing.ps1  organise_downloads.ps1  screenshot  sync_folders.ps1  winget_apps_modified.json
home_assistant/: conbee_unraid_passthrough_settings.txt  flic_hub_test.js  flic_hub_webhook.js
