[tool.poetry]
name = "python_scripts"
version = "0.1.0"
description = "Series of local automation and testing scripts"
authors = ["Paul <Sivivatu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
